--- a/opencl/pathfinder/makefile
+++ b/opencl/pathfinder/makefile
@@ -7,8 +7,10 @@ pathfinder: main.o OpenCL.o
 
 # compile main function file into object (binary)
 main.o: main.cpp OpenCL.cpp kernels.cl
-	$(CXX) $(CXXFLAGS) main.cpp OpenCL.cpp
+	$(OCL_LINK) main.cpp OpenCL.cpp -o $@
 
 clean:
 	@rm -f pathfinder *.o *.out *~ *\#
 
+install: $(targets)
+	install -m $(install_perms) -t $(OCL_BIN_DIR) $(targets)
