--- a/opencl/streamcluster/Makefile
+++ b/opencl/streamcluster/Makefile
@@ -1,24 +1,23 @@
 include ../../common/make.config
 
-#C compiler
-CC = g++
-
-
-FLAGS = -O3
 SRC = streamcluster.cpp
 EXE = streamcluster
+targets=$(EXE)
 
-release:$(SRC)
-	$(CC) -lOpenCL  $(SRC) -o $(EXE) -I$(OPENCL_INC) -L$(OPENCL_LIB)	$(FLAGS)
+$(EXE):$(SRC)
+	$(OCL_LINK) $^ -o $@
 
 errmsg:$(SRC)
 	$(CC) -lOpenCL $(SRC) -o $(EXE) -I$(OPENCL_INC) -L$(OPENCL_LIB) -D ERRMSG $(FLAGS)
-	
+
 ptx:$(SRC)
 	$(CC) -lOpenCL $(SRC) -o $(EXE) -I$(OPENCL_INC) -L$(OPENCL_LIB) -D PTX_MSG $(FLAGS)
-	
+
 res:$(SRC)
 	$(CC) -lOpenCL $(SRC) -o $(EXE) -I$(OPENCL_INC) -L$(OPENCL_LIB) -D RES_MSG $(FLAGS)
-	
+
 clean: $(SRC)
 	rm -f $(EXE) $(EXE).linkinfo result*
+
+install: $(targets)
+	install -m $(install_perms) -t $(OCL_BIN_DIR) $(targets)
