fix more makefiles

--- a/cuda/backprop/Makefile
+++ b/cuda/backprop/Makefile
@@ -1,25 +1,26 @@
 include ../../common/make.config
 targets=backprop
 
+CC_FLAGS += -I.
 CC_LINK_FLAGS += -lm
 
 backprop: backprop.o facetrain.o imagenet.o backprop_cuda.o 
 	$(NVCC_LINK) $^ -o $@
 
 %.o: %.[ch]
-	$(CC) $(CC_FLAGS) $< -c
+	$(NVCC_OBJ) $< -c
 
 facetrain.o: facetrain.c backprop.h
-	$(CC) $(CC_FLAGS) facetrain.c -c
+	$(NVCC_OBJ) facetrain.c -c
 
 backprop.o: backprop.c backprop.h
-	$(CC) $(CC_FLAGS) backprop.c -c
+	$(NVCC_OBJ) backprop.c -c
 
 backprop_cuda.o: backprop_cuda.cu backprop.h
-	$(NVCC) $(NVCC_FLAGS) -c backprop_cuda.cu
+	$(NVCC_OBJ) -c backprop_cuda.cu
 
 imagenet.o: imagenet.c backprop.h
-	$(CC) $(CC_FLAGS) imagenet.c -c
+	$(NVCC_OBJ) imagenet.c -c
 
 clean:
 	rm -f *.o *~ backprop backprop_cuda.linkinfo
