--- a/common/make.config
+++ b/common/make.config
@@ -30,7 +30,7 @@ CUDA_DIR ?= /usr/local/cuda4.0
 NVCC ?= $(CUDA_DIR)/bin/nvcc
 NVCC_FLAGS ?= -I$(CUDA_DIR)/include -Xptxas -v
 
-NVCC_OBJ ?=$(NVCC) $(NVCC_FLAGS) $(CC_FLAGS)
+NVCC_OBJ ?=$(NVCC) $(NVCC_FLAGS)
 NVCC_LINK ?=$(NVCC_OBJ) $(CC_LINK_FLAGS) -L$(CUDA_LIB_DIR) 
 
 # 'make dbg=1' enables NVCC debugging
