add openacc options

--- a/common/make.config
+++ b/common/make.config
@@ -92,3 +92,10 @@ OCL_LINK ?=$(OCL_OBJ) -L$(OPENCL_LIB) -lOpenCL
 #     	OPENCL_LIB = $(OPENCL_DIR)/lib/x86_64/
 #     endif
 #endif
+
+OPENACC_DIR       ?=/opt/pgi/linux86-64/2012
+OPENACC_FLAGS      = $(CC_FLAGS)
+OPENACC_CC         =$(OPENACC_DIR)/bin/pgcc $(OPENACC_FLAGS)
+OPENACC_LINK_FLAGS = $(CC_LINK_FLAGS)
+OPENACC_LINK    =$(OPENACC_CC) $(OPENACC_LINK_FLAGS)
+#OPENACC_CXX       =$(OPENACC_DIR)/bin/pg++
