--- a/common/make.config
+++ b/common/make.config
@@ -28,7 +28,8 @@ CUDA_DIR ?= /usr/local/cuda4.0
 
 # CUDA compiler
 NVCC ?= $(CUDA_DIR)/bin/nvcc
-NVCC_FLAGS ?= -I$(CUDA_DIR)/include -Xptxas -v
+CUDA_ARCH ?= -arch=sm_20
+NVCC_FLAGS ?= -I$(CUDA_DIR)/include -Xptxas -v $(CUDA_ARCH)
 
 NVCC_OBJ ?=$(NVCC) $(NVCC_FLAGS)
 NVCC_LINK ?=$(NVCC_OBJ) $(CC_LINK_FLAGS) -L$(CUDA_LIB_DIR) 
@@ -93,9 +94,21 @@ OCL_LINK ?=$(OCL_OBJ) -L$(OPENCL_LIB) -lOpenCL
 #     endif
 #endif
 
-OPENACC_DIR       ?=/opt/pgi/linux86-64/2012
-OPENACC_FLAGS      = $(CC_FLAGS)
-OPENACC_CC         =$(OPENACC_DIR)/bin/pgcc $(OPENACC_FLAGS)
+pgi_nv_arch?=cc20
+pgi_cuda_ver?=cuda4.0
+
+PGCC_FLAGS?=-fast -fastsse -tp=nehalem-64 -Msafeptr=all
+PGCC_GPU_FLAGS?=-ta=nvidia:$(pgi_nv_arch) -Mcuda=$(pgi_cuda_ver) -Minfo=accel,loop,lre,par,vect
+
+#NVCC?=/usr/local/cuda4.1/bin/nvcc
+NVCC4.0?=/usr/local/cuda4.0/bin/nvcc
+NVCC4.1?=/usr/local/cuda4.1/bin/nvcc
+
+PGCC_FLAGS+=$(DBG) $(OPT_FLAGS)
+
+PGCC_DIR       ?=/opt/pgi/linux86-64/2012
+OPENACC_FLAGS      ?= $(PGCC_FLAGS)
+OPENACC_CC         =$(PGCC_DIR)/bin/pgcc $(OPENACC_FLAGS) $(PGCC_GPU_FLAGS) -acc
 OPENACC_LINK_FLAGS = $(CC_LINK_FLAGS)
 OPENACC_LINK    =$(OPENACC_CC) $(OPENACC_LINK_FLAGS)
 #OPENACC_CXX       =$(OPENACC_DIR)/bin/pg++
