generate timing info in OpenACC programs

--- a/common/make.config
+++ b/common/make.config
@@ -98,7 +98,7 @@ pgi_nv_arch?=cc20
 pgi_cuda_ver?=cuda4.0
 
 PGCC_FLAGS?=-fast -fastsse -tp=nehalem-64 -Msafeptr=all
-PGCC_GPU_FLAGS?=-ta=nvidia:$(pgi_nv_arch) -Mcuda=$(pgi_cuda_ver) -Minfo=accel,loop,lre,par,vect
+PGCC_GPU_FLAGS?=-ta=nvidia:$(pgi_nv_arch),time -Mcuda=$(pgi_cuda_ver) -Minfo=accel,loop,lre,par,vect
 
 #NVCC?=/usr/local/cuda4.1/bin/nvcc
 NVCC4.0?=/usr/local/cuda4.0/bin/nvcc
