add atlas-lapack, cula versions

--- a/openacc/lud/makefile
+++ b/openacc/lud/makefile
@@ -3,9 +3,9 @@ include ../../common/make.config
 EXECUTABLE      := lud_openacc
 targets=$(EXECUTABLE)
 
-SOURCES         := lud.c lud_openacc.c common/common.c 
+SOURCES         := lud.c lud_openacc.c common/common.c lud_base.c lud_lapack.c lud_cula.c
 
-OPENACC_FLAGS += -Icommon
+OPENACC_FLAGS += -Icommon -I/usr/local/atlas/include -I/usr/local/cula/include
 
 BASENAMES       = $(basename $(SOURCES))
 
@@ -14,7 +14,7 @@ OBJECTS         = $(addsuffix .o,$(BASENAMES))
 
 # ------------  make the executable (the default goal)  ------------------------
 $(EXECUTABLE):	$(OBJECTS)
-	$(OPENACC_LINK) $^ -o $@
+	$(OPENACC_LINK) $^ -o $@ -L/usr/local/cula/lib64 -lcula_core -lcula_lapack -L/usr/local/atlas/lib -llapack -lptf77blas -lptcblas -latlas 
 
 # ------------  make the objects  ----------------------------------------------
 %.o:%.c
