--- a/common/make.config
+++ b/common/make.config
@@ -14,12 +14,17 @@ install_perms ?=0755
 CC=gcc
 CXX=g++
 CC_FLAGS ?=
+CXX_FLAGS ?=
 CC_LINK_FLAGS ?=
+CXX_LINK_FLAGS ?=
 
 #OMP_LIB ?= -lgomp
 OMP_FLAG ?= -fopenmp
 CC_OMP ?=$(CC) $(CC_FLAGS) $(OMP_FLAG)
 CC_OMP_LINK ?= $(CC_OMP) $(CC_LINK_FLAGS)
+
+CXX_OMP ?=$(CXX) $(CXX_FLAGS) $(OMP_FLAG)
+CXX_OMP_LINK ?=$(CXX_OMP) $(CXX_LINK_FLAGS)
 
 OMP_NUM_THREADS ?= 8
 
@@ -32,7 +37,7 @@ CUDA_ARCH ?= -arch=sm_20
 NVCC_FLAGS ?= -I$(CUDA_DIR)/include -Xptxas -v $(CUDA_ARCH)
 
 NVCC_OBJ ?=$(NVCC) $(NVCC_FLAGS)
-NVCC_LINK ?=$(NVCC_OBJ) $(CC_LINK_FLAGS) -L$(CUDA_LIB_DIR) 
+NVCC_LINK ?=$(NVCC_OBJ) --link $(CC_LINK_FLAGS) -L$(CUDA_LIB_DIR) 
 
 # 'make dbg=1' enables NVCC debugging
 ifeq ($(dbg),1)
@@ -47,7 +52,6 @@ endif
 ifeq ($(emu),1)
 	NVCC_FLAGS += -deviceemu
 endif
-
 
 # CUDA toolkit libraries
 CUDA_LIB_DIR := $(CUDA_DIR)/lib
