compile gen_input from lud with standard compiler

--- a/openmp/lud/tools/Makefile
+++ b/openmp/lud/tools/Makefile
@@ -1,2 +1,6 @@
+include ../../../common/make.config
 gen_input: gen_input.c
-	gcc -o gen_input -O3 gen_input.c -fopenmp
+	$(CC_OMP_LINK) -o $@ -O3 $^
+
+clean: 
+	rm -f gen_input *~
