add readme for data files

--- a/common/make.config
+++ b/common/make.config
@@ -43,7 +43,9 @@ NVCC_LINK ?=$(NVCC_OBJ) --link $(CC_LINK_FLAGS) -L$(CUDA_LIB_DIR)
 ifeq ($(dbg),1)
 	NVCC_FLAGS += -g -O0
 	CC_FLAGS += -g -O0
+	CXX_FLAGS += -g -O0
 else
+	CXX_FLAGS += -O3
 	CC_FLAGS += -O3
 	NVCC_FLAGS += -O3
 endif
