add profile option (make prof=1)

--- a/common/make.config
+++ b/common/make.config
@@ -18,6 +18,14 @@ CXX_FLAGS ?=
 CC_LINK_FLAGS ?=
 CXX_LINK_FLAGS ?=
 
+ifeq ($(prof),1)
+CC_FLAGS += -pg
+CXX_FLAGS += -pg
+CC_LINK_FLAGS += -pg
+CXX_LINK_FLAGS += -pg
+NVCC_FLAGS += -pg
+endif
+
 #OMP_LIB ?= -lgomp
 OMP_FLAG ?= -fopenmp
 CC_OMP ?=$(CC) $(CC_FLAGS) $(OMP_FLAG)
@@ -26,7 +34,7 @@ CC_OMP_LINK ?= $(CC_OMP) $(CC_LINK_FLAGS)
 CXX_OMP ?=$(CXX) $(CXX_FLAGS) $(OMP_FLAG)
 CXX_OMP_LINK ?=$(CXX_OMP) $(CXX_LINK_FLAGS)
 
-OMP_NUM_THREADS ?= 8
+OMP_NUM_THREADS ?= 4
 
 # CUDA toolkit installation path
 CUDA_DIR ?= /usr/local/cuda4.0
