add _DEBUG symbol in debug mode

--- a/common/make.config
+++ b/common/make.config
@@ -48,10 +48,11 @@ NVCC_OBJ ?=$(NVCC) $(NVCC_FLAGS)
 NVCC_LINK ?=$(NVCC_OBJ) --link $(CC_LINK_FLAGS) -L$(CUDA_LIB_DIR) 
 
 # 'make dbg=1' enables NVCC debugging
+DEBUG_FLAGS ?= -g -O2 -D_DEBUG
 ifeq ($(dbg),1)
-	NVCC_FLAGS += -g -O2
-	CC_FLAGS += -g -O2
-	CXX_FLAGS += -g -O2
+	NVCC_FLAGS +=$(DEBUG_FLAGS)
+	CC_FLAGS +=$(DEBUG_FLAGS)
+	CXX_FLAGS +=$(DEBUG_FLAGS)
 else
 	CXX_FLAGS += -O3
 	CC_FLAGS += -O3
