pass flags to openacc

--- a/common/make.config
+++ b/common/make.config
@@ -49,14 +49,17 @@ NVCC_LINK ?=$(NVCC_OBJ) --link $(CC_LINK_FLAGS) -L$(CUDA_LIB_DIR)
 
 # 'make dbg=1' enables NVCC debugging
 DEBUG_FLAGS ?= -g -O2 -D_DEBUG
+OPT_FLAGS ?= -O3
 ifeq ($(dbg),1)
 	NVCC_FLAGS +=$(DEBUG_FLAGS)
 	CC_FLAGS +=$(DEBUG_FLAGS)
 	CXX_FLAGS +=$(DEBUG_FLAGS)
+	OPENACC_FLAGS +=$(DEBUG_FLAGS)
 else
-	CXX_FLAGS += -O3
-	CC_FLAGS += -O3
-	NVCC_FLAGS += -O3
+	CXX_FLAGS +=$(OPT_FLAGS)
+	CC_FLAGS +=$(OPT_FLAGS)
+	NVCC_FLAGS +=$(OPT_FLAGS)
+	OPENACC_FLAGS +=$(OPT_FLAGS)
 endif
 
 # 'make emu=1' compiles the CUDA kernels for emulation
@@ -119,10 +122,8 @@ PGCC_GPU_FLAGS?=-ta=nvidia:$(pgi_nv_arch),time -Mcuda=$(pgi_cuda_ver) -Minfo=acc
 NVCC4.0?=/usr/local/cuda4.0/bin/nvcc
 NVCC4.1?=/usr/local/cuda4.1/bin/nvcc
 
-PGCC_FLAGS+=$(DBG) $(OPT_FLAGS)
-
 PGCC_DIR       ?=/opt/pgi/linux86-64/2012
-OPENACC_FLAGS      ?= $(PGCC_FLAGS)
+OPENACC_FLAGS      += $(PGCC_FLAGS)
 OPENACC_CC         =$(PGCC_DIR)/bin/pgcc $(OPENACC_FLAGS) $(PGCC_GPU_FLAGS) -acc
 OPENACC_LINK_FLAGS = $(CC_LINK_FLAGS)
 OPENACC_LINK    =$(OPENACC_CC) $(OPENACC_LINK_FLAGS)
