use C++ compiler.  Also, PGI does not support OpenACC in C++ at the moment.

--- a/common/make.config
+++ b/common/make.config
@@ -125,6 +125,7 @@ NVCC4.1?=/usr/local/cuda4.1/bin/nvcc
 PGCC_DIR       ?=/opt/pgi/linux86-64/2012
 OPENACC_FLAGS      += $(PGCC_FLAGS)
 OPENACC_CC         =$(PGCC_DIR)/bin/pgcc $(OPENACC_FLAGS) $(PGCC_GPU_FLAGS) -acc
+OPENACC_CXX =$(PGCC_DIR)/bin/pgc++ $(OPENACC_FLAGS) $(PGCC_GPU_FLAGS) -acc
 OPENACC_LINK_FLAGS = $(CC_LINK_FLAGS)
-OPENACC_LINK    =$(OPENACC_CC) $(OPENACC_LINK_FLAGS)
-#OPENACC_CXX       =$(OPENACC_DIR)/bin/pg++
+OPENACC_CC_LINK    =$(OPENACC_CC) $(OPENACC_LINK_FLAGS)
+OPENACC_CXX_LINK   =$(OPENACC_CXX) $(OPENACC_LINK_FLAGS)
