convert mummergpu kernel to C

--- a/common/make.config
+++ b/common/make.config
@@ -115,8 +115,8 @@ OCL_LINK ?=$(OCL_OBJ) -L$(OPENCL_LIB) -lOpenCL
 pgi_nv_arch?=cc20
 pgi_cuda_ver?=cuda4.0
 
-PGCC_FLAGS?=-fast -fastsse -tp=nehalem-64 -Msafeptr=all
-PGCC_GPU_FLAGS?=-ta=nvidia:$(pgi_nv_arch),time -Mcuda=$(pgi_cuda_ver) -Minfo=accel,loop,lre,par,vect
+PGCC_FLAGS?=-fast -fastsse -tp=nehalem-64 -Msafeptr=all -Minfo=accel,loop,lre,par,vect
+PGCC_GPU_FLAGS?=-ta=nvidia:$(pgi_nv_arch),time -Mcuda=$(pgi_cuda_ver) 
 
 #NVCC?=/usr/local/cuda4.1/bin/nvcc
 NVCC4.0?=/usr/local/cuda4.0/bin/nvcc
@@ -125,7 +125,8 @@ NVCC4.1?=/usr/local/cuda4.1/bin/nvcc
 PGCC_DIR       ?=/opt/pgi/linux86-64/2012
 OPENACC_FLAGS      += $(PGCC_FLAGS)
 OPENACC_CC         =$(PGCC_DIR)/bin/pgcc $(OPENACC_FLAGS) $(PGCC_GPU_FLAGS) -acc
-OPENACC_CXX =$(PGCC_DIR)/bin/pgc++ $(OPENACC_FLAGS) $(PGCC_GPU_FLAGS) -acc
+OPENACC_CXX =$(PGCC_DIR)/bin/pgc++ $(OPENACC_FLAGS)
+# $(PGCC_GPU_FLAGS) -acc
 OPENACC_LINK_FLAGS = $(CC_LINK_FLAGS)
 OPENACC_CC_LINK    =$(OPENACC_CC) $(OPENACC_LINK_FLAGS)
 OPENACC_CXX_LINK   =$(OPENACC_CXX) $(OPENACC_LINK_FLAGS)
