allow linking without openmp

--- a/common/make.config
+++ b/common/make.config
@@ -26,6 +26,8 @@ CXX_LINK_FLAGS += -pg
 NVCC_FLAGS += -pg
 endif
 
+CXX_LINK ?=$(CXX) $(CXX_LINK_FLAGS)
+
 #OMP_LIB ?= -lgomp
 OMP_FLAG ?= -fopenmp
 CC_OMP ?=$(CC) $(CC_FLAGS) $(OMP_FLAG)
