--- a/openmp/streamcluster/Makefile
+++ b/openmp/streamcluster/Makefile
@@ -6,12 +6,12 @@ TARGET_O = sc_omp
 
 targets=$(TARGET_C) $(TARGET_O)
 
-CXXFLAGS += -DENABLE_THREADS
+#CXXFLAGS += -DENABLE_THREADS
 
 all: $(targets)
 
 $(TARGET_C): streamcluster_original.cpp
-	$(CXX_LINK) $^ -o $@
+	$(CXX_LINK) $^ -o $@ -DENABLE_THREADS -lpthread
 
 $(TARGET_O): streamcluster_omp.cpp
 	$(CXX_OMP_LINK) -o $@ $^
