proper optimization and definitions for OpenMP and C++ versions

--- a/common/make.config
+++ b/common/make.config
@@ -15,14 +15,12 @@ CC=gcc
 CXX=g++
 CC_FLAGS ?=
 CXX_FLAGS ?=
-CC_LINK_FLAGS ?=
-CXX_LINK_FLAGS ?=
+CC_LINK_FLAGS ?=$(CC_FLAGS)
+CXX_LINK_FLAGS ?=$(CXX_FLAGS)
 
 ifeq ($(prof),1)
 CC_FLAGS += -pg
 CXX_FLAGS += -pg
-CC_LINK_FLAGS += -pg
-CXX_LINK_FLAGS += -pg
 NVCC_FLAGS += -pg
 endif
 
