--- a/openmp/streamcluster/Makefile
+++ b/openmp/streamcluster/Makefile
@@ -1,20 +1,18 @@
 include ../../common/make.config
 
-TARGET_C = sc_cpu
+TARGET_C = sc_pthreads
 
 TARGET_O = sc_omp
 
 targets=$(TARGET_C) $(TARGET_O)
-
-#CXXFLAGS += -DENABLE_THREADS
 
 all: $(targets)
 
 $(TARGET_C): streamcluster_original.cpp
 	$(CXX_LINK) $^ -o $@ -DENABLE_THREADS -lpthread
 
-$(TARGET_O): streamcluster_omp.cpp
-	$(CXX_OMP_LINK) -o $@ $^
+$(TARGET_O): streamcluster_original.cpp
+	$(CXX_OMP_LINK) -o $@ $^ -DOMP
 
 
 clean:
