--- a/common/make.config
+++ b/common/make.config
@@ -45,7 +45,7 @@ CUDA_ARCH ?= -arch=sm_20
 NVCC_FLAGS ?= -I$(CUDA_DIR)/include -Xptxas -v $(CUDA_ARCH)
 
 NVCC_OBJ ?=$(NVCC) $(NVCC_FLAGS)
-NVCC_LINK ?=$(NVCC_OBJ) --link $(CC_LINK_FLAGS) -L$(CUDA_LIB_DIR) 
+NVCC_LINK ?=$(NVCC_OBJ) --link -L$(CUDA_LIB_DIR) 
 
 # 'make dbg=1' enables NVCC debugging
 DEBUG_FLAGS ?= -g -O2 -D_DEBUG
