add pgcc options without accelerators

--- a/common/make.config
+++ b/common/make.config
@@ -7,6 +7,7 @@ RODINIA_BASE_DIR ?= $(HOME)/code/rodinia_2.0.1
 CUDA_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/cuda
 OMP_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/omp
 OCL_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/opencl
+OAC_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/openacc
 
 install_perms ?=0755
 
@@ -124,7 +125,13 @@ NVCC4.1?=/usr/local/cuda4.1/bin/nvcc
 
 PGCC_DIR       ?=/opt/pgi/linux86-64/2012
 OPENACC_FLAGS      += $(PGCC_FLAGS)
+PGCC =$(PGCC_DIR)/bin/pgcc $(PGCC_FLAGS)
+PGCC_LINK =$(PGCC) $(PGCC_LINK_FLAGS)
+PGCXX =$(PGCC_DIR)/bin/pgc++ $(PGCC_FLAGS)
+PGCXX_LINK =$(PGCXX) $(PGCXX_LINK_FLAGS)
 OPENACC_CC         =$(PGCC_DIR)/bin/pgcc $(OPENACC_FLAGS) $(PGCC_GPU_FLAGS) -acc
+
+# no C++ support yet
 OPENACC_CXX =$(PGCC_DIR)/bin/pgc++ $(OPENACC_FLAGS)
 # $(PGCC_GPU_FLAGS) -acc
 OPENACC_LINK_FLAGS = $(CC_LINK_FLAGS)
