update some flags

--- a/common/make.config
+++ b/common/make.config
@@ -123,13 +123,13 @@ PGCC_GPU_FLAGS?=-ta=nvidia:$(pgi_nv_arch),time -Mcuda=$(pgi_cuda_ver)
 NVCC4.0?=/usr/local/cuda4.0/bin/nvcc
 NVCC4.1?=/usr/local/cuda4.1/bin/nvcc
 
-PGCC_DIR       ?=/opt/pgi/linux86-64/2012
-OPENACC_FLAGS      += $(PGCC_FLAGS)
-PGCC =$(PGCC_DIR)/bin/pgcc $(PGCC_FLAGS)
+PGCC_DIR ?=/opt/pgi/linux86-64/2012
+OPENACC_FLAGS += $(PGCC_FLAGS)
+PGCC =$(PGCC_DIR)/bin/pgcc $(PGCC_FLAGS) $(CC_FLAGS)
 PGCC_LINK =$(PGCC) $(PGCC_LINK_FLAGS)
-PGCXX =$(PGCC_DIR)/bin/pgc++ $(PGCC_FLAGS)
+PGCXX =$(PGCC_DIR)/bin/pgc++ $(PGCC_FLAGS) $(CXX_FLAGS)
 PGCXX_LINK =$(PGCXX) $(PGCXX_LINK_FLAGS)
-OPENACC_CC         =$(PGCC_DIR)/bin/pgcc $(OPENACC_FLAGS) $(PGCC_GPU_FLAGS) -acc
+OPENACC_CC =$(PGCC_DIR)/bin/pgcc $(OPENACC_FLAGS) $(PGCC_GPU_FLAGS) -acc
 
 # no C++ support yet
 OPENACC_CXX =$(PGCC_DIR)/bin/pgc++ $(OPENACC_FLAGS)
